[gd_scene load_steps=5 format=3 uid="uid://3les52jwhf8"]

[ext_resource type="Script" path="res://Scenes/GameMainScreenScenes/GameScenes/UpgradesSection.gd" id="1_71aif"]
[ext_resource type="Script" path="res://Scenes/GameMainScreenScenes/GameScenes/UpgradeSection/UpgradePage.gd" id="2_2c32x"]
[ext_resource type="Script" path="res://Scenes/GameMainScreenScenes/GameScenes/UpgradeSection/Upgrades.gd" id="3_c0qh1"]
[ext_resource type="PackedScene" uid="uid://g5qrm3ptlru0" path="res://Scenes/GameMainScreenScenes/GameScenes/UpgradeSection/upgrade_item.tscn" id="4_myle6"]

[node name="UpgradesSection" type="VBoxContainer"]
custom_minimum_size = Vector2(798, 926)
offset_right = 798.0
offset_bottom = 926.0
script = ExtResource("1_71aif")

[node name="UpgradePage" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("2_2c32x")

[node name="UpgradeTabs" type="MarginContainer" parent="UpgradePage"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5

[node name="Background" type="ColorRect" parent="UpgradePage/UpgradeTabs"]
layout_mode = 2
color = Color(0.352941, 0.262745, 0.262745, 1)

[node name="HBox" type="HBoxContainer" parent="UpgradePage/UpgradeTabs"]
layout_mode = 2
alignment = 2

[node name="TabButtonsMC" type="MarginContainer" parent="UpgradePage/UpgradeTabs/HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="HBox" type="HBoxContainer" parent="UpgradePage/UpgradeTabs/HBox/TabButtonsMC"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="UpgradeTabButton1" type="Button" parent="UpgradePage/UpgradeTabs/HBox/TabButtonsMC/HBox"]
custom_minimum_size = Vector2(105, 0)
layout_mode = 2
text = "Oak"

[node name="UpgradeTabButton2" type="Button" parent="UpgradePage/UpgradeTabs/HBox/TabButtonsMC/HBox"]
custom_minimum_size = Vector2(105, 0)
layout_mode = 2
text = "Apple"

[node name="UpgradeTabButton3" type="Button" parent="UpgradePage/UpgradeTabs/HBox/TabButtonsMC/HBox"]
custom_minimum_size = Vector2(105, 0)
layout_mode = 2
text = "Maple"

[node name="UpgradeTabButton4" type="Button" parent="UpgradePage/UpgradeTabs/HBox/TabButtonsMC/HBox"]
custom_minimum_size = Vector2(105, 0)
layout_mode = 2
text = "Birch"

[node name="UpgradeTabButton5" type="Button" parent="UpgradePage/UpgradeTabs/HBox/TabButtonsMC/HBox"]
custom_minimum_size = Vector2(105, 0)
layout_mode = 2
text = "Spruce"

[node name="Margin" type="MarginContainer" parent="UpgradePage/UpgradeTabs/HBox"]
custom_minimum_size = Vector2(4, 0)
layout_mode = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_bottom = 2

[node name="ColorRect" type="ColorRect" parent="UpgradePage/UpgradeTabs/HBox/Margin"]
layout_mode = 2
color = Color(0.34902, 0.34902, 0.34902, 1)

[node name="BuyMaxMC" type="MarginContainer" parent="UpgradePage/UpgradeTabs/HBox"]
custom_minimum_size = Vector2(190, 0)
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 5

[node name="AllTabsBuyMaxButton" type="Button" parent="UpgradePage/UpgradeTabs/HBox/BuyMaxMC"]
layout_mode = 2
text = "Buy Max"

[node name="AllTabsCantAffordRect" type="ColorRect" parent="UpgradePage/UpgradeTabs/HBox/BuyMaxMC/AllTabsBuyMaxButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.513726, 0.0941176, 0, 0.301961)

[node name="Upgrades" type="MarginContainer" parent="UpgradePage"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 10
script = ExtResource("3_c0qh1")

[node name="VBox" type="VBoxContainer" parent="UpgradePage/Upgrades"]
layout_mode = 2

[node name="TopHBox" type="HBoxContainer" parent="UpgradePage/Upgrades/VBox"]
layout_mode = 2
size_flags_vertical = 0
alignment = 2

[node name="TitleMC" type="MarginContainer" parent="UpgradePage/Upgrades/VBox/TopHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 20

[node name="TitleLabel" type="Label" parent="UpgradePage/Upgrades/VBox/TopHBox/TitleMC"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Oak"

[node name="BuyMaxMC" type="MarginContainer" parent="UpgradePage/Upgrades/VBox/TopHBox"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 15

[node name="TabBuyMaxButton" type="Button" parent="UpgradePage/Upgrades/VBox/TopHBox/BuyMaxMC"]
layout_mode = 2
theme_override_colors/icon_normal_color = Color(0.227451, 0.392157, 0.392157, 1)
text = "Buy Max"

[node name="TabsCantAffordRect" type="ColorRect" parent="UpgradePage/Upgrades/VBox/TopHBox/BuyMaxMC/TabBuyMaxButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.513726, 0.0941176, 0, 0.301961)

[node name="ScrollBar" type="ScrollContainer" parent="UpgradePage/Upgrades/VBox"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="MC" type="MarginContainer" parent="UpgradePage/Upgrades/VBox/ScrollBar"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="ItemGrid" type="GridContainer" parent="UpgradePage/Upgrades/VBox/ScrollBar/MC"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 32
theme_override_constants/v_separation = 29
columns = 2

[node name="UpgradeItem1" parent="UpgradePage/Upgrades/VBox/ScrollBar/MC/ItemGrid" instance=ExtResource("4_myle6")]
layout_mode = 2

[node name="UpgradeItem2" parent="UpgradePage/Upgrades/VBox/ScrollBar/MC/ItemGrid" instance=ExtResource("4_myle6")]
layout_mode = 2
UpgradeNumber = 2

[node name="UpgradeItem3" parent="UpgradePage/Upgrades/VBox/ScrollBar/MC/ItemGrid" instance=ExtResource("4_myle6")]
layout_mode = 2
UpgradeNumber = 3

[node name="UpgradeItem4" parent="UpgradePage/Upgrades/VBox/ScrollBar/MC/ItemGrid" instance=ExtResource("4_myle6")]
layout_mode = 2
UpgradeNumber = 4

[node name="UpgradeItem5" parent="UpgradePage/Upgrades/VBox/ScrollBar/MC/ItemGrid" instance=ExtResource("4_myle6")]
layout_mode = 2
UpgradeNumber = 5

[node name="UpgradeItem6" parent="UpgradePage/Upgrades/VBox/ScrollBar/MC/ItemGrid" instance=ExtResource("4_myle6")]
layout_mode = 2
UpgradeNumber = 6

[node name="UpgradeItem7" parent="UpgradePage/Upgrades/VBox/ScrollBar/MC/ItemGrid" instance=ExtResource("4_myle6")]
layout_mode = 2
UpgradeNumber = 7

[node name="UpgradeItem8" parent="UpgradePage/Upgrades/VBox/ScrollBar/MC/ItemGrid" instance=ExtResource("4_myle6")]
layout_mode = 2
UpgradeNumber = 8

[node name="UpgradeItem9" parent="UpgradePage/Upgrades/VBox/ScrollBar/MC/ItemGrid" instance=ExtResource("4_myle6")]
layout_mode = 2
UpgradeNumber = 9

[node name="UpgradeItem10" parent="UpgradePage/Upgrades/VBox/ScrollBar/MC/ItemGrid" instance=ExtResource("4_myle6")]
layout_mode = 2
UpgradeNumber = 10

[node name="PageButtons" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5

[node name="ColorRect" type="ColorRect" parent="PageButtons"]
visible = false
layout_mode = 2
color = Color(0.352941, 0.262745, 0.262745, 1)

[node name="HBox" type="HBoxContainer" parent="PageButtons"]
layout_mode = 2
alignment = 1

[node name="PageButtonMC" type="MarginContainer" parent="PageButtons/HBox"]
custom_minimum_size = Vector2(185, 0)
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 8

[node name="HBox" type="HBoxContainer" parent="PageButtons/HBox/PageButtonMC"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Page1Button" type="Button" parent="PageButtons/HBox/PageButtonMC/HBox"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Classic"

[node name="Page2Button" type="Button" parent="PageButtons/HBox/PageButtonMC/HBox"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Rare"

[node name="Page3Button" type="Button" parent="PageButtons/HBox/PageButtonMC/HBox"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Mythic"

[node name="Page4Button" type="Button" parent="PageButtons/HBox/PageButtonMC/HBox"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Gold"

[connection signal="button_down" from="UpgradePage/UpgradeTabs/HBox/TabButtonsMC/HBox/UpgradeTabButton1" to="UpgradePage" method="_on_upgrade_tab_button_1_button_down"]
[connection signal="button_down" from="UpgradePage/UpgradeTabs/HBox/TabButtonsMC/HBox/UpgradeTabButton2" to="UpgradePage" method="_on_upgrade_tab_button_2_button_down"]
[connection signal="button_down" from="UpgradePage/UpgradeTabs/HBox/TabButtonsMC/HBox/UpgradeTabButton3" to="UpgradePage" method="_on_upgrade_tab_button_3_button_down"]
[connection signal="button_down" from="UpgradePage/UpgradeTabs/HBox/TabButtonsMC/HBox/UpgradeTabButton4" to="UpgradePage" method="_on_upgrade_tab_button_4_button_down"]
[connection signal="button_down" from="UpgradePage/UpgradeTabs/HBox/TabButtonsMC/HBox/UpgradeTabButton5" to="UpgradePage" method="_on_upgrade_tab_button_5_button_down"]
[connection signal="button_down" from="UpgradePage/UpgradeTabs/HBox/BuyMaxMC/AllTabsBuyMaxButton" to="UpgradePage" method="_on_all_tabs_buy_max_button_button_down"]
[connection signal="button_down" from="UpgradePage/Upgrades/VBox/TopHBox/BuyMaxMC/TabBuyMaxButton" to="UpgradePage/Upgrades" method="_on_tab_buy_max_button_button_down"]
[connection signal="button_down" from="PageButtons/HBox/PageButtonMC/HBox/Page1Button" to="." method="_on_page_1_button_button_down"]
[connection signal="button_down" from="PageButtons/HBox/PageButtonMC/HBox/Page2Button" to="." method="_on_page_2_button_button_down"]
[connection signal="button_down" from="PageButtons/HBox/PageButtonMC/HBox/Page3Button" to="." method="_on_page_3_button_button_down"]
[connection signal="button_down" from="PageButtons/HBox/PageButtonMC/HBox/Page4Button" to="." method="_on_page_4_button_button_down"]
